--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-02-21 17:07-0300\n"
+"PO-Revision-Date: 2023-02-23 16:03-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -132,7 +132,7 @@ msgstr "en un patrón de captura en la concordancia de patrones estructurales"
 
 #: ../Doc/reference/executionmodel.rst:73
 msgid ":keyword:`import` statements."
-msgstr ""
+msgstr ":keyword:`import` declaraciones."
 
 #: ../Doc/reference/executionmodel.rst:75
 msgid ""
@@ -140,6 +140,9 @@ msgid ""
 "names defined in the imported module, except those beginning with an "
 "underscore. This form may only be used at the module level."
 msgstr ""
+"La declaración :keyword:`!import` de la forma ``from ... import *`` vincula "
+"todos los nombres definidos en el módulo importado, excepto los que empiezan "
+"por guión bajo. Esta forma sólo puede utilizarse a nivel de módulo."
 
 #: ../Doc/reference/executionmodel.rst:79
 msgid ""
