--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-02-23 16:03-0300\n"
+"PO-Revision-Date: 2023-02-26 13:41-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/reference/executionmodel.rst:6
 msgid "Execution model"
@@ -114,7 +114,7 @@ msgstr ""
 
 #: ../Doc/reference/executionmodel.rst:68
 msgid ":keyword:`for` loop header,"
-msgstr ":keyword:`for` cabecera del bucle,"
+msgstr "cabecera del bucle :keyword:`for`,"
 
 #: ../Doc/reference/executionmodel.rst:69
 msgid ""
@@ -122,7 +122,7 @@ msgid ""
 "clause, :keyword:`except* <except_star>` clause, or in the as-pattern in "
 "structural pattern matching,"
 msgstr ""
-"después de :keyword:`!as` en una sentencia :keyword:`with`, cláusula :"
+"después de :keyword:`!as` en una declaración :keyword:`with`, cláusula :"
 "keyword:`except`, cláusula :keyword:`except* <except_star>`, o en el patrón "
 "as en la concordancia de patrones estructurales,"
 
@@ -132,7 +132,7 @@ msgstr "en un patrón de captura en la concordancia de patrones estructurales"
 
 #: ../Doc/reference/executionmodel.rst:73
 msgid ":keyword:`import` statements."
-msgstr ":keyword:`import` declaraciones."
+msgstr "declaraciones :keyword:`import`."
 
 #: ../Doc/reference/executionmodel.rst:75
 msgid ""
@@ -445,11 +445,11 @@ msgid ""
 "but it cannot repair the cause of the error and retry the failing operation "
 "(except by re-entering the offending piece of code from the top)."
 msgstr ""
-"Python usa el modelo de gestión de errores de "
-"\"terminación\" (\"*termination*\"): un gestor de excepción puede descubrir "
-"qué sucedió y continuar la ejecución en un nivel exterior, pero no puede "
-"reparar la causa del error y reintentar la operación que ha fallado (excepto "
-"que se reingrese al trozo de código fallido desde su inicio)."
+"Python usa el modelo de gestión de errores de \"terminación"
+"\" (\"*termination*\"): un gestor de excepción puede descubrir qué sucedió y "
+"continuar la ejecución en un nivel exterior, pero no puede reparar la causa "
+"del error y reintentar la operación que ha fallado (excepto que se reingrese "
+"al trozo de código fallido desde su inicio)."
 
 #: ../Doc/reference/executionmodel.rst:256
 msgid ""
