--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-02-26 13:41-0300\n"
+"PO-Revision-Date: 2023-02-26 13:55-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -199,11 +199,10 @@ msgid ""
 "different binding for the name."
 msgstr ""
 "Un :dfn:`scope` define la visibilidad de un nombre en un bloque. Si una "
-"variable local se define en un bloque, su ámbito (*scope*) incluye ese "
-"bloque. Si la definición ocurre en un bloque de función, el ámbito se "
-"extiende a cualquier bloque contenido en el bloque en donde está la "
-"definición, a menos que uno de los bloques contenidos introduzca un vínculo "
-"diferente para el nombre."
+"variable local se define en un bloque, su ámbito incluye ese bloque. Si la "
+"definición ocurre en un bloque de función, el ámbito se extiende a cualquier "
+"bloque contenido en el bloque en donde está la definición, a menos que uno "
+"de los bloques contenidos introduzca un vínculo diferente para el nombre."
 
 #: ../Doc/reference/executionmodel.rst:111
 msgid ""
