--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -444,11 +444,11 @@ msgid ""
 "but it cannot repair the cause of the error and retry the failing operation "
 "(except by re-entering the offending piece of code from the top)."
 msgstr ""
-"Python usa el modelo de gestión de errores de \"terminación"
-"\" (\"*termination*\"): un gestor de excepción puede descubrir qué sucedió y "
-"continuar la ejecución en un nivel exterior, pero no puede reparar la causa "
-"del error y reintentar la operación que ha fallado (excepto que se reingrese "
-"al trozo de código fallido desde su inicio)."
+"Python usa el modelo de gestión de errores de "
+"\"terminación\" (\"*termination*\"): un gestor de excepción puede descubrir "
+"qué sucedió y continuar la ejecución en un nivel exterior, pero no puede "
+"reparar la causa del error y reintentar la operación que ha fallado (excepto "
+"que se reingrese al trozo de código fallido desde su inicio)."
 
 #: ../Doc/reference/executionmodel.rst:256
 msgid ""
