Traducido archivo reference/executionmodel (#2319)
Closes #1903

---------

Co-authored-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-02 19:39+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-02-26 14:02-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/reference/executionmodel.rst:6
 msgid "Execution model"
@@ -85,33 +86,35 @@ msgstr ""
 
 #: ../Doc/reference/executionmodel.rst:59
 msgid "The following constructs bind names:"
-msgstr ""
+msgstr "Las siguientes construcciones enlazan nombres:"
 
 #: ../Doc/reference/executionmodel.rst:61
 msgid "formal parameters to functions,"
-msgstr ""
+msgstr "parámetros formales de las funciones,"
 
 #: ../Doc/reference/executionmodel.rst:62
 msgid "class definitions,"
-msgstr ""
+msgstr "definiciones de clase,"
 
 #: ../Doc/reference/executionmodel.rst:63
 msgid "function definitions,"
-msgstr ""
+msgstr "definiciones de funciones,"
 
 #: ../Doc/reference/executionmodel.rst:64
 msgid "assignment expressions,"
-msgstr ""
+msgstr "expresiones de asignación,"
 
 #: ../Doc/reference/executionmodel.rst:65
 msgid ""
 ":ref:`targets <assignment>` that are identifiers if occurring in an "
 "assignment:"
 msgstr ""
+":ref:`targets <assignment>` que son identificadores si aparecen en una "
+"asignación:"
 
 #: ../Doc/reference/executionmodel.rst:68
 msgid ":keyword:`for` loop header,"
-msgstr ""
+msgstr "cabecera del bucle :keyword:`for`,"
 
 #: ../Doc/reference/executionmodel.rst:69
 msgid ""
@@ -119,14 +122,17 @@ msgid ""
 "clause, :keyword:`except* <except_star>` clause, or in the as-pattern in "
 "structural pattern matching,"
 msgstr ""
+"después de :keyword:`!as` en una declaración :keyword:`with`, cláusula :"
+"keyword:`except`, cláusula :keyword:`except* <except_star>`, o en el patrón "
+"as en la concordancia de patrones estructurales,"
 
 #: ../Doc/reference/executionmodel.rst:71
 msgid "in a capture pattern in structural pattern matching"
-msgstr ""
+msgstr "en un patrón de captura en la concordancia de patrones estructurales"
 
 #: ../Doc/reference/executionmodel.rst:73
 msgid ":keyword:`import` statements."
-msgstr ""
+msgstr "declaraciones :keyword:`import`."
 
 #: ../Doc/reference/executionmodel.rst:75
 msgid ""
@@ -134,6 +140,9 @@ msgid ""
 "names defined in the imported module, except those beginning with an "
 "underscore. This form may only be used at the module level."
 msgstr ""
+"La declaración :keyword:`!import` de la forma ``from ... import *`` vincula "
+"todos los nombres definidos en el módulo importado, excepto los que empiezan "
+"por guión bajo. Esta forma sólo puede utilizarse a nivel de módulo."
 
 #: ../Doc/reference/executionmodel.rst:79
 msgid ""
@@ -190,11 +199,10 @@ msgid ""
 "different binding for the name."
 msgstr ""
 "Un :dfn:`scope` define la visibilidad de un nombre en un bloque. Si una "
-"variable local se define en un bloque, su ámbito (*scope*) incluye ese "
-"bloque. Si la definición ocurre en un bloque de función, el ámbito se "
-"extiende a cualquier bloque contenido en el bloque en donde está la "
-"definición, a menos que uno de los bloques contenidos introduzca un vínculo "
-"diferente para el nombre."
+"variable local se define en un bloque, su ámbito incluye ese bloque. Si la "
+"definición ocurre en un bloque de función, el ámbito se extiende a cualquier "
+"bloque contenido en el bloque en donde está la definición, a menos que uno "
+"de los bloques contenidos introduzca un vínculo diferente para el nombre."
 
 #: ../Doc/reference/executionmodel.rst:111
 msgid ""
