Apply suggestions from code review
Co-authored-by: Sofía Denner <sofi.denner@gmail.com>

--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -685,19 +685,19 @@ msgid ""
 "`None`.  Otherwise, if :meth:`~generator.send` is used, then the result will "
 "be the value passed in to that method."
 msgstr ""
-"Cuando se llama a una función de generador, devuelve un iterador conocido "
-"como generador. Ese generador luego controla la ejecución de la función del "
-"generador. La ejecución comienza cuando se llama a uno de los métodos del "
-"generador. En ese momento, la ejecución procede a la primera expresión de "
-"rendimiento, donde se suspende nuevamente, devolviendo el valor de :token:"
-"`~python-grammar:expression_list` a la persona que llama al generador. Por "
+"Cuando se llama a una función generadora, devuelve un iterador conocido "
+"como generador. Ese generador luego controla la ejecución de la función "
+"generadora. La ejecución comienza cuando se llama a uno de los métodos del "
+"generador. En ese momento, la ejecución procede hasta la primera expresión "
+"*yield*, donde se suspende nuevamente, devolviendo el valor de :token:"
+"`~python-grammar:expression_list` al invocador del generador. Por "
 "suspendido, queremos decir que se retiene todo el estado local, incluidos "
 "los enlaces actuales de las variables locales, el puntero de instrucción, la "
 "pila de evaluación interna y el estado de cualquier manejo de excepción. "
 "Cuando se reanuda la ejecución llamando a uno de los métodos del generador, "
-"la función puede proceder exactamente como si la expresión de rendimiento "
-"fuera simplemente otra llamada externa. El valor de la expresión de "
-"rendimiento después de reanudar depende del método que reanudó la ejecución. "
+"la función puede proceder exactamente como si la expresión *yield* "
+"fuera simplemente otra llamada externa. El valor de la expresión "
+"*yield* después de reanudar depende del método que reanudó la ejecución. "
 "Si se utiliza :meth:`~generator.__next__` (normalmente mediante un :keyword:"
 "`for` o el :func:`next` integrado), el resultado es :const:`None`. De lo "
 "contrario, si se usa :meth:`~generator.send`, el resultado será el valor "
@@ -860,12 +860,12 @@ msgid ""
 "`StopIteration` exception is raised."
 msgstr ""
 "Inicia la ejecución de una función generadora o la reanuda en la última "
-"expresión de rendimiento ejecutada. Cuando se reanuda una función de "
-"generador con un método :meth:`~generator.__next__`, la expresión de "
-"rendimiento actual siempre se evalúa como :const:`None`. Luego, la ejecución "
-"continúa con la siguiente expresión de rendimiento, donde el generador se "
+"expresión *yield* ejecutada. Cuando se reanuda una función "
+"generadora con un método :meth:`~generator.__next__`, la expresión "
+"*yield* actual siempre se evalúa como :const:`None`. Luego, la ejecución "
+"continúa hasta la siguiente expresión *yield*, donde el generador se "
 "suspende nuevamente y el valor de :token:`~python-grammar:expression_list` "
-"se devuelve a la persona que llama a :meth:`__next__`. Si el generador sale "
+"se devuelve al invocador de :meth:`__next__`. Si el generador sale "
 "sin generar otro valor, se genera una excepción :exc:`StopIteration`."
 
 #: ../Doc/reference/expressions.rst:549
@@ -903,10 +903,10 @@ msgid ""
 "a different exception, then that exception propagates to the caller."
 msgstr ""
 "Genera una excepción en el punto donde se pausó el generador y devuelve el "
-"siguiente valor generado por la función del generador. Si el generador sale "
+"siguiente valor generado por la función generadora. Si el generador sale "
 "sin generar otro valor, se genera una excepción :exc:`StopIteration`. Si la "
-"función del generador no detecta la excepción pasada o genera una excepción "
-"diferente, esa excepción se propaga a la persona que llama."
+"función generadora no captura la excepción pasada o genera una excepción "
+"diferente, esa excepción se propaga al invocador."
 
 #: ../Doc/reference/expressions.rst:573
 msgid ""
@@ -1023,7 +1023,7 @@ msgid ""
 msgstr ""
 "Llamar a uno de los métodos del generador asíncrono devuelve un objeto :term:"
 "`awaitable` y la ejecución comienza cuando se espera este objeto. En ese "
-"momento, la ejecución procede a la primera expresión de rendimiento, donde "
+"momento, la ejecución procede hasta la primera expresión *yield*, donde "
 "se suspende nuevamente, devolviendo el valor de :token:`~python-grammar:"
 "expression_list` a la rutina en espera. Al igual que con un generador, la "
 "suspensión significa que se retiene todo el estado local, incluidos los "
@@ -1031,8 +1031,8 @@ msgstr ""
 "pila de evaluación interna y el estado de cualquier manejo de excepción. "
 "Cuando se reanuda la ejecución esperando el siguiente objeto devuelto por "
 "los métodos del generador asíncrono, la función puede proceder exactamente "
-"como si la expresión de rendimiento fuera simplemente otra llamada externa. "
-"El valor de la expresión de rendimiento después de reanudar depende del "
+"como si la expresión *yield* fuera simplemente otra llamada externa. "
+"El valor de la expresión *yield* después de reanudar depende del "
 "método que reanudó la ejecución. Si se utiliza :meth:`~agen.__anext__`, el "
 "resultado es :const:`None`. De lo contrario, si se usa :meth:`~agen.asend`, "
 "el resultado será el valor pasado a ese método."
@@ -1140,12 +1140,12 @@ msgid ""
 "has completed."
 msgstr ""
 "Devuelve un awaitable que, cuando se ejecuta, comienza a ejecutar el "
-"generador asíncrono o lo reanuda en la última expresión de rendimiento "
-"ejecutada. Cuando se reanuda una función de generador asíncrono con un "
-"método :meth:`~agen.__anext__`, la expresión de rendimiento actual siempre "
+"generador asíncrono o lo reanuda en la última expresión *yield* "
+"ejecutada. Cuando se reanuda una función generadora asíncrona con un "
+"método :meth:`~agen.__anext__`, la expresión *yield* actual siempre "
 "se evalúa como :const:`None` en el awaitable devuelto, que cuando se ejecuta "
-"continuará con la siguiente expresión de rendimiento. El valor de :token:"
-"`~python-grammar:expression_list` de la expresión de rendimiento es el valor "
+"continuará con la siguiente expresión *yield*. El valor de :token:"
+"`~python-grammar:expression_list` de la expresión *yield* es el valor "
 "de la excepción :exc:`StopIteration` generada por la rutina de finalización. "
 "Si el generador asíncrono sale sin generar otro valor, el awaitable genera "
 "una excepción :exc:`StopAsyncIteration`, lo que indica que la iteración "
@@ -1292,7 +1292,7 @@ msgid ""
 "When an object is subscripted, the interpreter will evaluate the primary and "
 "the expression list."
 msgstr ""
-"Cuando se subíndice un objeto, el intérprete evaluará el principal y la "
+"Cuando se subíndice un objeto, el intérprete evaluará el primario y la "
 "lista de expresiones."
 
 #: ../Doc/reference/expressions.rst:842
@@ -1304,7 +1304,7 @@ msgid ""
 "one of these methods. For more details on when ``__class_getitem__`` is "
 "called instead of ``__getitem__``, see :ref:`classgetitem-versus-getitem`."
 msgstr ""
-"El principal debe evaluarse como un objeto que admita la suscripción. Un "
+"El primario debe evaluarse como un objeto que admita la suscripción. Un "
 "objeto puede admitir la suscripción mediante la definición de uno o ambos :"
 "meth:`~object.__getitem__` y :meth:`~object.__class_getitem__`. Cuando se "
 "subíndice el principal, el resultado evaluado de la lista de expresiones se "
@@ -1338,7 +1338,7 @@ msgid ""
 "subscription selects the value in the mapping that corresponds to that key. "
 "An example of a builtin mapping class is the :class:`dict` class."
 msgstr ""
-"Mapeos. Si el principal es un :term:`mapping`, la lista de expresiones debe "
+"Mapeos. Si el primario es un :term:`mapping`, la lista de expresiones debe "
 "evaluarse como un objeto cuyo valor es una de las claves de la asignación y "
 "la suscripción selecciona el valor en la asignación que corresponde a esa "
 "clave. Un ejemplo de una clase de asignación integrada es la clase :class:"
@@ -1378,7 +1378,7 @@ msgstr ""
 "elementos de la secuencia, y la suscripción selecciona el elemento cuyo "
 "índice es ese valor (contando desde cero). Dado que la compatibilidad con "
 "los índices negativos y el corte se produce en el método :meth:`__getitem__` "
-"del objeto, las subclases que invaliden este método deberán agregar "
+"del objeto, las subclases que sobrescriban este método deberán agregar "
 "explícitamente esa compatibilidad."
 
 #: ../Doc/reference/expressions.rst:879
@@ -1523,7 +1523,7 @@ msgstr ""
 "tanto, un objeto mutable, como una lista o un diccionario utilizado como "
 "valor predeterminado, será compartido por todas las llamadas que no "
 "especifiquen un valor de argumento para la ranura correspondiente; esto "
-"debería normalmente se evita.) Si hay ranuras sin llenar para las que no se "
+"normalmente debería ser evitado.) Si hay ranuras sin llenar para las que no se "
 "especifica ningún valor predeterminado, se genera una excepción :exc:"
 "`TypeError`. De lo contrario, la lista de espacios ocupados se utiliza como "
 "lista de argumentos para la llamada."
@@ -1617,7 +1617,7 @@ msgid ""
 "given a value (by an explicit keyword argument, or from another unpacking), "
 "a :exc:`TypeError` exception is raised."
 msgstr ""
-"Si la sintaxis ``**expression`` aparece en la llamada de función, "
+"Si la sintaxis ``**expression`` aparece en la llamada de la función, "
 "``expression`` debe evaluarse como :term:`mapping`, cuyo contenido se trata "
 "como argumentos de palabra clave adicionales. Si ya se ha dado un valor a un "
 "parámetro que coincide con una clave (por un argumento de palabra clave "
@@ -2912,7 +2912,7 @@ msgid ""
 "left to right (except for exponentiation and conditional expressions, which "
 "group from right to left)."
 msgstr ""
-"La siguiente tabla resume la precedencia del operador en Python, desde la "
+"La siguiente tabla resume la precedencia de los operadores en Python, desde la "
 "precedencia más alta (la más vinculante) hasta la precedencia más baja (la "
 "menos vinculante). Los operadores en el mismo cuadro tienen la misma "
 "precedencia. A menos que se proporcione explícitamente la sintaxis, los "
