--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -1291,8 +1291,8 @@ msgid ""
 "When an object is subscripted, the interpreter will evaluate the primary and "
 "the expression list."
 msgstr ""
-"Cuando se subíndice un objeto, el intérprete evaluará el primario y la "
-"lista de expresiones."
+"Cuando se subíndice un objeto, el intérprete evaluará el primario y la lista "
+"de expresiones."
 
 #: ../Doc/reference/expressions.rst:842
 msgid ""
@@ -1522,8 +1522,8 @@ msgstr ""
 "tanto, un objeto mutable, como una lista o un diccionario utilizado como "
 "valor predeterminado, será compartido por todas las llamadas que no "
 "especifiquen un valor de argumento para la ranura correspondiente; esto "
-"normalmente debería ser evitado.) Si hay ranuras sin llenar para las que no se "
-"especifica ningún valor predeterminado, se genera una excepción :exc:"
+"normalmente debería ser evitado.) Si hay ranuras sin llenar para las que no "
+"se especifica ningún valor predeterminado, se genera una excepción :exc:"
 "`TypeError`. De lo contrario, la lista de espacios ocupados se utiliza como "
 "lista de argumentos para la llamada."
 
@@ -2910,9 +2910,9 @@ msgid ""
 "left to right (except for exponentiation and conditional expressions, which "
 "group from right to left)."
 msgstr ""
-"La siguiente tabla resume la precedencia de los operadores en Python, desde la "
-"precedencia más alta (la más vinculante) hasta la precedencia más baja (la "
-"menos vinculante). Los operadores en el mismo cuadro tienen la misma "
+"La siguiente tabla resume la precedencia de los operadores en Python, desde "
+"la precedencia más alta (la más vinculante) hasta la precedencia más baja "
+"(la menos vinculante). Los operadores en el mismo cuadro tienen la misma "
 "precedencia. A menos que se proporcione explícitamente la sintaxis, los "
 "operadores son binarios. Los operadores en el mismo cuadro se agrupan de "
 "izquierda a derecha (excepto la exponenciación y las expresiones "
