Apply suggestions from code review
Co-authored-by: Erick G. Islas-Osuna <erickisos653@gmail.com>

--- a/howto/isolating-extensions.po
+++ b/howto/isolating-extensions.po
@@ -50,7 +50,7 @@ msgstr ""
 
 #: ../Doc/howto/isolating-extensions.rst:21
 msgid "Who should read this"
-msgstr "quien debería leer esto"
+msgstr "¿Quien debería leer esto?"
 
 #: ../Doc/howto/isolating-extensions.rst:23
 msgid ""
@@ -64,7 +64,7 @@ msgstr ""
 
 #: ../Doc/howto/isolating-extensions.rst:29
 msgid "Background"
-msgstr "Fondo"
+msgstr "Trasfondo"
 
 #: ../Doc/howto/isolating-extensions.rst:31
 msgid ""
@@ -72,7 +72,7 @@ msgid ""
 "configuration (e.g. the import path) and runtime state (e.g. the set of "
 "imported modules)."
 msgstr ""
-"Un *interpreter* es el contexto en el que se ejecuta el código de Python. "
+"Un intérprete (*interpreter*) es el contexto en el que se ejecuta el código de Python. "
 "Contiene la configuración (p. ej., la ruta de importación) y el estado de "
 "tiempo de ejecución (p. ej., el conjunto de módulos importados)."
 
@@ -82,7 +82,7 @@ msgid ""
 "cases to think about—users may run interpreters:"
 msgstr ""
 "Python admite la ejecución de varios intérpretes en un solo proceso. Hay dos "
-"casos en los que pensar: los usuarios pueden ejecutar intérpretes:"
+"casos en los que pensar, los usuarios pueden ejecutar intérpretes:"
 
 #: ../Doc/howto/isolating-extensions.rst:38
 msgid ""
