--- a/howto/isolating-extensions.po
+++ b/howto/isolating-extensions.po
@@ -72,9 +72,9 @@ msgid ""
 "configuration (e.g. the import path) and runtime state (e.g. the set of "
 "imported modules)."
 msgstr ""
-"Un intérprete (*interpreter*) es el contexto en el que se ejecuta el código de Python. "
-"Contiene la configuración (p. ej., la ruta de importación) y el estado de "
-"tiempo de ejecución (p. ej., el conjunto de módulos importados)."
+"Un intérprete (*interpreter*) es el contexto en el que se ejecuta el código "
+"de Python. Contiene la configuración (p. ej., la ruta de importación) y el "
+"estado de tiempo de ejecución (p. ej., el conjunto de módulos importados)."
 
 #: ../Doc/howto/isolating-extensions.rst:35
 msgid ""
