Apply suggestions from code review
Co-authored-by: Marcos Medrano <786907+mmmarcos@users.noreply.github.com>

--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -805,7 +805,7 @@ msgid ""
 msgstr ""
 "Si no hay expresiones presentes, :keyword:`raise` vuelve a lanzar la "
 "excepción que se está manejando actualmente, que también se conoce como "
-"*active exception*. Si actualmente no hay una excepción activa, se lanza una "
+"*excepción activa*. Si actualmente no hay una excepción activa, se lanza una "
 "excepción :exc:`RuntimeError` que indica que se trata de un error."
 
 #: ../Doc/reference/simple_stmts.rst:569
