Fix inconsistencies in the "What's new" titles.

--- a/whatsnew/2.0.po
+++ b/whatsnew/2.0.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.0.rst:3
 msgid "What's New in Python 2.0"
-msgstr "Novedades de Python 2.0"
+msgstr "Qué hay de nuevo en Python 2.0"
 
 #: ../Doc/whatsnew/2.0.rst
 msgid "Author"
