--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.1.rst:3
 msgid "What's New in Python 2.1"
-msgstr "Novedades de Python 2.1"
+msgstr "Qué hay de nuevo en Python 2.1"
 
 #: ../Doc/whatsnew/2.1.rst
 msgid "Author"
