--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.5.rst:3
 msgid "What's New in Python 2.5"
-msgstr "Novedades de Python 2.5"
+msgstr "Qué hay de nuevo en Python 2.5"
 
 #: ../Doc/whatsnew/2.5.rst
 msgid "Author"
