--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.10.rst:3
 msgid "What's New In Python 3.10"
-msgstr "Novedades de Python 3.10"
+msgstr "Qué hay de nuevo en Python 3.10"
 
 #: ../Doc/whatsnew/3.10.rst
 msgid "Release"
