--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.4.rst:3
 msgid "What's New In Python 3.4"
-msgstr "Novedades de Python 3.4"
+msgstr "Qué hay de nuevo en Python 3.4"
 
 #: ../Doc/whatsnew/3.4.rst
 msgid "Author"
