--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:3
 msgid "What's New In Python 3.7"
-msgstr "Que hay de nuevo en Python 3.7"
+msgstr "Qué hay de nuevo en Python 3.7"
 
 #: ../Doc/whatsnew/3.7.rst
 msgid "Editor"
