--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:3
 msgid "What's New in Python 2.4"
-msgstr "Novedades en Python 2.4"
+msgstr "Qué hay de nuevo en Python 2.4"
 
 #: ../Doc/whatsnew/2.4.rst
 msgid "Author"
