--- a/whatsnew/3.11.po
+++ b/whatsnew/3.11.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.11.rst:3
 msgid "What's New In Python 3.11"
-msgstr "Novedades en Python 3.11"
+msgstr "Qué hay de nuevo en Python 3.11"
 
 #: ../Doc/whatsnew/3.11.rst
 msgid "Release"
