--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:3
 msgid "What's New In Python 3.3"
-msgstr "Que novedades hay en python 3.3"
+msgstr "Qué hay de nuevo en Python 3.3"
 
 #: ../Doc/whatsnew/3.3.rst:45
 msgid ""
