--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.6.rst:3
 msgid "What's New In Python 3.6"
-msgstr "Novedades de Python 3.6"
+msgstr "Qué hay de nuevo en Python 3.6"
 
 #: ../Doc/whatsnew/3.6.rst
 msgid "Editors"
