--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.9.rst:3
 msgid "What's New In Python 3.9"
-msgstr "Novedades de Python 3.9"
+msgstr "Qué hay de nuevo en Python 3.9"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Release"
