traducido-archivo-howto-urllib2.po

--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-04 17:27+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2023-03-06 14:00-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -20,6 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/howto/urllib2.rst:5
 msgid "HOWTO Fetch Internet Resources Using The urllib Package"
@@ -31,7 +32,7 @@ msgstr "Autor"
 
 #: ../Doc/howto/urllib2.rst:7
 msgid "`Michael Foord <https://agileabstractions.com/>`_"
-msgstr ""
+msgstr "`Michael Foord <https://agileabstractions.com/>`_"
 
 #: ../Doc/howto/urllib2.rst:11
 msgid ""
@@ -40,6 +41,10 @@ msgid ""
 "web/20200910051922/http://www.voidspace.org.uk/python/articles/"
 "urllib2_francais.shtml>`_."
 msgstr ""
+"Hay una traducción al francés de una revisión anterior de este HOWTO., "
+"disponible en `urllib2 - Le Manuel manquant <https://web.archive.org/"
+"web/20200910051922/http://www.voidspace.org.uk/python/articles/"
+"urllib2_francais.shtml>`_."
 
 #: ../Doc/howto/urllib2.rst:18
 msgid "Introduction"
@@ -180,8 +185,8 @@ msgid ""
 "In the case of HTTP, there are two extra things that Request objects allow "
 "you to do: First, you can pass data to be sent to the server.  Second, you "
 "can pass extra information (\"metadata\") *about* the data or about the "
-"request itself, to the server - this information is sent as HTTP "
-"\"headers\".  Let's look at each of these in turn."
+"request itself, to the server - this information is sent as HTTP \"headers"
+"\".  Let's look at each of these in turn."
 msgstr ""
 "En el caso de HTTP, hay dos cosas adicionales que los objetos Request le "
 "permiten hacer: Primero, puede pasar datos para enviarlos al servidor. En "
@@ -373,11 +378,11 @@ msgstr ""
 "Cada respuesta HTTP del servidor contiene un \"código de estado\" numérico. "
 "A veces el código de estado indica que el servidor es incapaz de satisfacer "
 "la petición. Los gestores predeterminados se encargarán de algunas de estas "
-"respuestas automáticamente (por ejemplo, si la respuesta es una "
-"\"redirección\" que solicita que el cliente obtenga el documento desde una "
-"URL diferente, urllib se encargará de eso por ti). Para aquellas respuestas "
-"que no puede manejar, urlopen lanzará un :exc:`HTTPError`. Los errores "
-"típicos incluyen '404' (página no encontrada), '403' (petición prohibida), y "
+"respuestas automáticamente (por ejemplo, si la respuesta es una \"redirección"
+"\" que solicita que el cliente obtenga el documento desde una URL diferente, "
+"urllib se encargará de eso por ti). Para aquellas respuestas que no puede "
+"manejar, urlopen lanzará un :exc:`HTTPError`. Los errores típicos incluyen "
+"'404' (página no encontrada), '403' (petición prohibida), y "
 "'401' (autenticación requerida)."
 
 #: ../Doc/howto/urllib2.rst:242
@@ -583,9 +588,8 @@ msgid ""
 "call ``install_opener``, except as a convenience."
 msgstr ""
 "Los objetos de apertura tienen un método ``open``, que puede ser llamado "
-"directamente para consultar urls de la misma manera que la función "
-"\"urlopen\": no hay necesidad de llamar ``install_opener``, excepto por "
-"conveniencia."
+"directamente para consultar urls de la misma manera que la función \"urlopen"
+"\": no hay necesidad de llamar ``install_opener``, excepto por conveniencia."
 
 #: ../Doc/howto/urllib2.rst:455
 msgid "Basic Authentication"
@@ -687,19 +691,19 @@ msgstr ""
 #: ../Doc/howto/urllib2.rst:522
 msgid ""
 "``top_level_url`` is in fact *either* a full URL (including the 'http:' "
-"scheme component and the hostname and optionally the port number) e.g. "
-"``\"http://example.com/\"`` *or* an \"authority\" (i.e. the hostname, "
-"optionally including the port number) e.g. ``\"example.com\"`` or "
-"``\"example.com:8080\"`` (the latter example includes a port number).  The "
+"scheme component and the hostname and optionally the port number) e.g. ``"
+"\"http://example.com/\"`` *or* an \"authority\" (i.e. the hostname, "
+"optionally including the port number) e.g. ``\"example.com\"`` or ``"
+"\"example.com:8080\"`` (the latter example includes a port number).  The "
 "authority, if present, must NOT contain the \"userinfo\" component - for "
 "example ``\"joe:password@example.com\"`` is not correct."
 msgstr ""
 "``top_level_url`` es de hecho *o* una URL completa (incluyendo el componente "
 "del esquema 'http:' y el nombre del host y opcionalmente el número de "
 "puerto) p.ej. ``\"http://example.com/\"`` *o* una \"autoridad\" (esto es, el "
-"nombre del host, incluyendo opcionalmente el número de puerto) por ejemplo "
-"``\"example.com\"`` o ``\"example.com:8080\"`` (este último ejemplo incluye "
-"un número de puerto).  La autoridad, si está presente, NO debe contener el "
+"nombre del host, incluyendo opcionalmente el número de puerto) por ejemplo ``"
+"\"example.com\"`` o ``\"example.com:8080\"`` (este último ejemplo incluye un "
+"número de puerto).  La autoridad, si está presente, NO debe contener el "
 "componente \"userinfo\" - por ejemplo ``\"joe:password@example.com\"`` no es "
 "correcto."
 
