--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-06 14:00-0300\n"
+"PO-Revision-Date: 2023-03-07 10:06-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
@@ -530,6 +530,14 @@ msgid ""
 "(http, ftp, etc.), or how to handle an aspect of URL opening, for example "
 "HTTP redirections or HTTP cookies."
 msgstr ""
+"Cuando obtienes una URL utilizas una apertura (una instancia de la quizás "
+"confusamente llamada :class:`urllib.request.OpenerDirector`). Normalmente "
+"hemos estado usando la apertura por defecto - a través de ``urlopen`` - pero "
+"puedes crear aperturas personalizadas. Las aperturas utilizan manejadores. "
+"Todo el \"trabajo pesado\" lo hacen los manejadores. Cada manejador sabe "
+"cómo abrir URLs para un esquema de URL particular (http, ftp, etc.), o cómo "
+"manejar un aspecto de la apertura de URLs, por ejemplo redirecciones HTTP o "
+"cookies HTTP."
 
 #: ../Doc/howto/urllib2.rst:430
 msgid ""
