--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -41,7 +41,7 @@ msgid ""
 "web/20200910051922/http://www.voidspace.org.uk/python/articles/"
 "urllib2_francais.shtml>`_."
 msgstr ""
-"Hay una traducción al francés de una revisión anterior de este HOWTO., "
+"Hay una traducción al francés de una revisión anterior de este HOWTO, "
 "disponible en `urllib2 - Le Manuel manquant <https://web.archive.org/"
 "web/20200910051922/http://www.voidspace.org.uk/python/articles/"
 "urllib2_francais.shtml>`_."
