--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -11,16 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-07 14:12-0300\n"
+"PO-Revision-Date: 2023-03-08 17:12-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
-"Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/urllib2.rst:5
 msgid "HOWTO Fetch Internet Resources Using The urllib Package"
@@ -500,7 +500,7 @@ msgid ""
 msgstr ""
 "**info** - retorna un objeto parecido a un diccionario que describe la "
 "página consultada, particularmente los encabezados enviados por el servidor. "
-"Actualmente es una instancia :class:`http.client.HTTPMessage`."
+"Actualmente es una instancia :class:`https.client.HTTPMessage`."
 
 #: ../Doc/howto/urllib2.rst:413
 msgid ""
