--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-08 17:12-0300\n"
+"PO-Revision-Date: 2023-03-09 08:37-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es_AR\n"
@@ -510,7 +510,7 @@ msgid ""
 "use."
 msgstr ""
 "Los encabezados típicos incluyen 'Content-length', 'Content-type' y así "
-"sucesivamente. Mira la `Quick Reference to HTTP Headers <http://jkorpela.fi/"
+"sucesivamente. Mira la `Quick Reference to HTTP Headers <https://jkorpela.fi/"
 "http.html>`_ para un listado útil de encabezados de HTTP con breves "
 "explicaciones de su significado y uso."
 
