--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -500,7 +500,7 @@ msgid ""
 msgstr ""
 "**info** - retorna un objeto parecido a un diccionario que describe la "
 "página consultada, particularmente los encabezados enviados por el servidor. "
-"Actualmente es una instancia :class:`https.client.HTTPMessage`."
+"Actualmente es una instancia :class:`http.client.HTTPMessage`."
 
 #: ../Doc/howto/urllib2.rst:413
 msgid ""
