traducido-archivo-howto-urllib2.po (#2340)
Closes #1893

---------

Co-authored-by: Rodrigo Tobar <rtobar@icrar.org>
Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-04 17:27+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_AR\n"
+"PO-Revision-Date: 2023-03-09 08:37-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/urllib2.rst:5
 msgid "HOWTO Fetch Internet Resources Using The urllib Package"
@@ -31,7 +32,7 @@ msgstr "Autor"
 
 #: ../Doc/howto/urllib2.rst:7
 msgid "`Michael Foord <https://agileabstractions.com/>`_"
-msgstr ""
+msgstr "`Michael Foord <https://agileabstractions.com/>`_"
 
 #: ../Doc/howto/urllib2.rst:11
 msgid ""
@@ -40,6 +41,10 @@ msgid ""
 "web/20200910051922/http://www.voidspace.org.uk/python/articles/"
 "urllib2_francais.shtml>`_."
 msgstr ""
+"Hay una traducción al francés de una revisión anterior de este HOWTO, "
+"disponible en `urllib2 - Le Manuel manquant <https://web.archive.org/"
+"web/20200910051922/http://www.voidspace.org.uk/python/articles/"
+"urllib2_francais.shtml>`_."
 
 #: ../Doc/howto/urllib2.rst:18
 msgid "Introduction"
@@ -54,7 +59,6 @@ msgstr ""
 "recursos web con Python:"
 
 #: ../Doc/howto/urllib2.rst:25
-#, fuzzy
 msgid ""
 "`Basic Authentication <https://web.archive.org/web/20201215133350/http://www."
 "voidspace.org.uk/python/articles/authentication.shtml>`_"
@@ -499,7 +503,6 @@ msgstr ""
 "Actualmente es una instancia :class:`http.client.HTTPMessage`."
 
 #: ../Doc/howto/urllib2.rst:413
-#, fuzzy
 msgid ""
 "Typical headers include 'Content-length', 'Content-type', and so on. See the "
 "`Quick Reference to HTTP Headers <https://jkorpela.fi/http.html>`_ for a "
@@ -507,7 +510,7 @@ msgid ""
 "use."
 msgstr ""
 "Los encabezados típicos incluyen 'Content-length', 'Content-type' y así "
-"sucesivamente. Mira la `Quick Reference to HTTP Headers <http://jkorpela.fi/"
+"sucesivamente. Mira la `Quick Reference to HTTP Headers <https://jkorpela.fi/"
 "http.html>`_ para un listado útil de encabezados de HTTP con breves "
 "explicaciones de su significado y uso."
 
@@ -525,6 +528,14 @@ msgid ""
 "(http, ftp, etc.), or how to handle an aspect of URL opening, for example "
 "HTTP redirections or HTTP cookies."
 msgstr ""
+"Cuando obtienes una URL utilizas una apertura (una instancia de la quizás "
+"confusamente llamada :class:`urllib.request.OpenerDirector`). Normalmente "
+"hemos estado usando la apertura por defecto - a través de ``urlopen`` - pero "
+"puedes crear aperturas personalizadas. Las aperturas utilizan manejadores. "
+"Todo el \"trabajo pesado\" lo hacen los manejadores. Cada manejador sabe "
+"cómo abrir URLs para un esquema de URL particular (http, ftp, etc.), o cómo "
+"manejar un aspecto de la apertura de URLs, por ejemplo redirecciones HTTP o "
+"cookies HTTP."
 
 #: ../Doc/howto/urllib2.rst:430
 msgid ""
